Chat (#1)
* exchange currency

* change thread poll -> StructuredTaskScope, enable preview futures

* mapper test

* Revert "change thread poll -> StructuredTaskScope, enable preview futures"

This reverts commit ba3a5632dc5ecd2f3fca4d3a28a4c4193d409749.

* change CommandHandler

* remove state machine and unused entities

* refactoring weather, exchange

* refactoring weather, exchange

* refactoring coordinated, encapsulation building URI in Coordinates

* adding padeg

* adding padeg

* add vk api

* cached weather in ArangoDB

* change aql and date type in saved objects

* create cache for weather and exchange for economy request

* make cache abstract, use template

* start create chat bot

* repair after dark times

* miltistage

* miltistage

* repair weather

* repair weather

* repair weather

* repair weather

* repair weather

* repair weather

* repair weather

* fix exchange message

* fix exchange message

* fix exchange message

* fix exchange message

* fix exchange message

* fix npe

* fix npe

* fix npe

---------

Co-authored-by: Vladimir Shevchenko <vshevchenko@inpromconsult.ru>